# Monopoly

./: CMakeLists.txt  log_file.txt  main.cpp  readme.md  readme.txt  svolgimento
Monopoly/: CMakeLists.txt  log_file.txt  log_file_partitaPc.txt  log_file_partitaUmano.txt  main.cpp  readme.md  readme.txt
Monopoly/include/: Giocatore.h  GiocatoreComputer.h  Partita.h
Monopoly/src/: Casella.cpp  Giocatore.cpp  GiocatoreComputer.cpp  GiocatoreUmano.cpp  Partita.cpp  Tabellone.cpp
include/: Casella.h  Giocatore.h  GiocatoreComputer.h  GiocatoreUmano.h  LogManager.h  Partita.h  PartitaComputer.h  PartitaUmano.h  Tabellone.h  Umano.h
src/: Casella.cpp  Giocatore.cpp  GiocatoreComputer.cpp  GiocatoreUmano.cpp  LogManager.cpp  Partita.cpp  PartitaComputer.cpp  PartitaUmano.cpp  Tabellone.cpp  Umano.cpp
test/: CMakeLists.txt
